// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Carousel /> should render a <Carousel> component with several pages 1`] = `
.c2 {
  position: relative;
  touch-action: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 {
  outline: none;
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 {
  height: 0.75rem;
  width: 0.75rem;
  background-color: rgba(224,225,221,1);
  border-radius: 50%;
  display: inline-block;
  cursor: pointer;
  margin: 0.25rem;
  background-color: rgba(116,118,120,1);
}

.c7 {
  height: 0.75rem;
  width: 0.75rem;
  background-color: rgba(224,225,221,1);
  border-radius: 50%;
  display: inline-block;
  cursor: pointer;
  margin: 0.25rem;
}

.c4 {
  min-width: 100%;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  left: 0%;
  -webkit-transition: left 0.3s ease-in-out;
  transition: left 0.3s ease-in-out;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  overflow: hidden;
}

<Carousel>
  <styled.div
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <div
      className="c0"
      onKeyDown={[Function]}
      tabIndex={0}
    >
      <styled.div>
        <div
          className="c1"
        >
          <InteractiveSurface
            onChange={[Function]}
            opaque={false}
          >
            <styled.div
              onClickCapture={[Function]}
              onMouseDownCapture={[Function]}
              onTouchStartCapture={[Function]}
            >
              <div
                className="c2"
                onClickCapture={[Function]}
                onMouseDownCapture={[Function]}
                onTouchStartCapture={[Function]}
              >
                <styled.div
                  selectedIndex={0}
                >
                  <div
                    className="c3"
                  >
                    <styled.div
                      key="item-0"
                    >
                      <div
                        className="c4"
                      >
                        <div>
                          First page.
                        </div>
                      </div>
                    </styled.div>
                    <styled.div
                      key="item-1"
                    >
                      <div
                        className="c4"
                      >
                        <div>
                          Second page.
                        </div>
                      </div>
                    </styled.div>
                    <styled.div
                      key="item-2"
                    >
                      <div
                        className="c4"
                      >
                        <div>
                          Third page.
                        </div>
                      </div>
                    </styled.div>
                    <styled.div
                      key="item-3"
                    >
                      <div
                        className="c4"
                      >
                        <div>
                          Final page.
                        </div>
                      </div>
                    </styled.div>
                  </div>
                </styled.div>
              </div>
            </styled.div>
          </InteractiveSurface>
        </div>
      </styled.div>
      <styled.div>
        <div
          className="c5"
        >
          <styled.div
            active={true}
            index={0}
            key="bullet-0"
            onClick={[Function]}
          >
            <div
              className="c6"
              onClick={[Function]}
            />
          </styled.div>
          <styled.div
            active={false}
            index={1}
            key="bullet-1"
            onClick={[Function]}
          >
            <div
              className="c7"
              onClick={[Function]}
            />
          </styled.div>
          <styled.div
            active={false}
            index={2}
            key="bullet-2"
            onClick={[Function]}
          >
            <div
              className="c7"
              onClick={[Function]}
            />
          </styled.div>
          <styled.div
            active={false}
            index={3}
            key="bullet-3"
            onClick={[Function]}
          >
            <div
              className="c7"
              onClick={[Function]}
            />
          </styled.div>
        </div>
      </styled.div>
    </div>
  </styled.div>
</Carousel>
`;

exports[`<Carousel /> should render a <Carousel> component with several pages in and selectedIndex 1`] = `
.c2 {
  position: relative;
  touch-action: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 {
  outline: none;
}

.c5 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 {
  height: 0.75rem;
  width: 0.75rem;
  background-color: rgba(224,225,221,1);
  border-radius: 50%;
  display: inline-block;
  cursor: pointer;
  margin: 0.25rem;
}

.c7 {
  height: 0.75rem;
  width: 0.75rem;
  background-color: rgba(224,225,221,1);
  border-radius: 50%;
  display: inline-block;
  cursor: pointer;
  margin: 0.25rem;
  background-color: rgba(116,118,120,1);
}

.c4 {
  min-width: 100%;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  left: -100%;
  -webkit-transition: left 0.3s ease-in-out;
  transition: left 0.3s ease-in-out;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  overflow: hidden;
}

<Carousel
  selectedIndex={1}
>
  <styled.div
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <div
      className="c0"
      onKeyDown={[Function]}
      tabIndex={0}
    >
      <styled.div>
        <div
          className="c1"
        >
          <InteractiveSurface
            onChange={[Function]}
            opaque={false}
          >
            <styled.div
              onClickCapture={[Function]}
              onMouseDownCapture={[Function]}
              onTouchStartCapture={[Function]}
            >
              <div
                className="c2"
                onClickCapture={[Function]}
                onMouseDownCapture={[Function]}
                onTouchStartCapture={[Function]}
              >
                <styled.div
                  selectedIndex={1}
                >
                  <div
                    className="c3"
                  >
                    <styled.div
                      key="item-0"
                    >
                      <div
                        className="c4"
                      >
                        <div>
                          First page.
                        </div>
                      </div>
                    </styled.div>
                    <styled.div
                      key="item-1"
                    >
                      <div
                        className="c4"
                      >
                        <div>
                          Second page.
                        </div>
                      </div>
                    </styled.div>
                    <styled.div
                      key="item-2"
                    >
                      <div
                        className="c4"
                      >
                        <div>
                          Final page.
                        </div>
                      </div>
                    </styled.div>
                  </div>
                </styled.div>
              </div>
            </styled.div>
          </InteractiveSurface>
        </div>
      </styled.div>
      <styled.div>
        <div
          className="c5"
        >
          <styled.div
            active={false}
            index={0}
            key="bullet-0"
            onClick={[Function]}
          >
            <div
              className="c6"
              onClick={[Function]}
            />
          </styled.div>
          <styled.div
            active={true}
            index={1}
            key="bullet-1"
            onClick={[Function]}
          >
            <div
              className="c7"
              onClick={[Function]}
            />
          </styled.div>
          <styled.div
            active={false}
            index={2}
            key="bullet-2"
            onClick={[Function]}
          >
            <div
              className="c6"
              onClick={[Function]}
            />
          </styled.div>
        </div>
      </styled.div>
    </div>
  </styled.div>
</Carousel>
`;
